# am-copilot

./: .env.example  .gitignore  BRD.md  CLAUDE.md  PRD.md  README.md  TSD.md  claude-code-setup-guide.md  d11-facilitation-guide.md  data-architecture.md  prompt-library.md  pyproject.toml  requirements.txt  rubric-spec.md  security-spec.md  synthetic-data-spec.md  testing-plan.md  ui-ux-spec.md
apps/dashboard/: index.html  package-lock.json  package.json
data/: human_grades.json  human_grades_v2.json
data/results/: syn_001_result.json  syn_002_result.json  syn_003_result.json  syn_004_result.json  syn_005_result.json  syn_006_result.json  syn_007_result.json  syn_008_result.json  syn_009_result.json  syn_010_result.json  syn_011_result.json  syn_012_result.json  syn_013_result.json  syn_014_result.json  syn_015_result.json  syn_016_result.json  syn_017_result.json  syn_018_result.json  syn_019_result.json  syn_020_result.json  syn_021_result.json  syn_022_result.json  syn_023_result.json  (+7 more)
docs/: d10-analysis.md  d8-analysis-v2.md  d8-analysis.md
infra/: package-lock.json  package.json
scripts/: analyze_disagreements.py  bedrock_smoke_test.py  grade_calls.py  regrade_dimensions.py  score_all_missing.py  score_one_call.py  upload_synthetic_to_s3.py  validate_rubric.py
services/api-gateway/: pyproject.toml
services/api-gateway/api_gateway/: auth.py  data_loader.py  main.py  state_store.py
services/api-gateway/api_gateway/routes/: calls.py  disagreements.py  health.py  queues.py
services/api-gateway/tests/: test_api.py  test_queues_and_disagreements.py
(+90 files in other folders)
